--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="themecolor">#9214ff</color>
     <color name="yellow">#E8D951</color>
     <color name="light_green">#17F2CE</color>
+    <color name="result_color">#E40B55</color>
 
 
     <color name="light_purple">#C9B1E6</color>
