--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -5,9 +5,9 @@
         android:title="@string/elibrary"
         android:icon="@drawable/ic_ebook"/>
 
-    <item android:id="@+id/navigation_video"
+ <!--   <item android:id="@+id/navigation_video"
         android:title="@string/video_lectures"
-        android:icon="@drawable/ic_lectures"/>
+        android:icon="@drawable/ic_lectures"/> -->
 
     <item android:id="@+id/navigation_results"
         android:title="@string/results"
